--- a/src/assets/scss/layout/_vertical.scss
+++ b/src/assets/scss/layout/_vertical.scss
@@ -5,10 +5,6 @@
 .block-area,
 .entry-content {
 
-  .single & {
-    margin-top: var(--global--text-margin);
-  }
-
   // block spacing
 
   > * {
@@ -18,7 +14,7 @@
       margin-top: var(--global--block-margin);
     }
 
-    &:last-child:not(.has-background) {
+    &:last-child:not(.has-background):not(.is-style-no-space) {
       margin-bottom: var(--global--spacing-vertical);
     }
   }
@@ -29,7 +25,6 @@
     }
   }
 
-  > .wp-block-cover,
   > .wp-block-group {
     margin-bottom: 0;
 
@@ -44,7 +39,7 @@
 
 
   // Padding
-
+  /*
   > .wp-block-group.alignfull,
   > .wp-block-group.alignwide,
   > .wp-block-group {
@@ -70,5 +65,38 @@
       padding-bottom: var(--global--block-margin);
     }
   }
+  */
 
+  // Padding - new code
+
+  > .wp-block-group {
+    padding-top: var(--global--spacing-vertical);
+    padding-bottom: var(--global--spacing-vertical);
+
+    &.has-background {
+      padding-top: var(--global--block-margin);
+      padding-bottom: var(--global--block-margin);
+      padding-left: $margin_site_s;
+      padding-right: $margin_site_s;
+      @include bp-min($small){
+        padding-left: var(--global--block-margin);
+        padding-right: var(--global--block-margin);
+      }
+
+      &.alignfull {
+        padding-top: var(--global--spacing-vertical);
+        padding-bottom: var(--global--spacing-vertical);
+      }
+
+      &.is-style-no-space {
+        padding-top: var(--global--block-margin);
+        padding-bottom: var(--global--block-margin);
+      }
+    }
+
+    &.is-style-no-space:not(.has-background) {
+      padding-top: var(--global--block-margin);
+      padding-bottom: var(--global--block-margin);
+    }
+  }
 }
